Scrollbar webkit fix, pt.1

--- a/style.css
+++ b/style.css
@@ -270,7 +270,7 @@ main {
     grid-row: span 2;
     flex-direction: column;
     gap: 2rem;
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 .card-grid {
@@ -293,7 +293,7 @@ main {
     align-self: center;
     background-color: #fff;
     padding: 2rem;
-    overflow: scroll;
+    overflow-y: scroll;
     box-shadow: 0px 0px 5px 0px #aaa;
 }
 
@@ -353,7 +353,7 @@ main {
     border-radius: 0.5rem;
     box-shadow: 0px 0px 5px 0px #aaa;
     padding: 2rem;
-    overflow: scroll;
+    overflow-y: scroll;
     scrollbar-width: 4px;
     scroll-padding: 2rem;
     flex: 1;
@@ -400,7 +400,7 @@ main {
     padding: 2rem;
     border-radius: 0.5rem;
     box-shadow: 0px 0px 5px 0px #aaa;
-    overflow: scroll;
+    overflow-y: scroll;
     scrollbar-width: 4px;
     scroll-padding: 2rem;
 }
